# open-cmd-rs

./: Cargo.toml  LICENSE
.github/workflows/: check.yml  clippy.yml
src/: lib.rs  linux.rs  macos.rs  path_or_uri.rs  windows.rs
